Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Details_of_Dependant__c.object
<CustomObject>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <referenceTo>Dependent__c</referenceTo>
        <relationshipLabel>Details of Dependants</relationshipLabel>
        <relationshipName>Details_of_Dependants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Education_Employer_Address__c</fullName>
        <label>Education/Employer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education_Employer_Name__c</fullName>
        <label>Education/Employer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <label>Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studying</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Details of Dependant</label>
    <nameField>
        <displayFormat>DoD-{000000}</displayFormat>
        <label>Details of Dependant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Details of Dependants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>